--- a/workflow/css/form-builder.css
+++ b/workflow/css/form-builder.css
@@ -74,6 +74,15 @@
     margin-bottom: 0.1rem;
 }
 
+/* Preview Pane */
+#preview-pane {
+    background-color: #f8f9fa;
+}
+#preview-pane fieldset {
+    pointer-events: none;
+    opacity: 0.8;
+}
+
 /* SortableJS styles */
 .sortable-ghost {
     background-color: rgba(13, 110, 253, 0.1);
