--- a/workflow/css/shell.css
+++ b/workflow/css/shell.css
@@ -127,7 +127,7 @@ body {
     border-radius: 7px;
     cursor: pointer;
     color: #fff;
-    padding-right: 30px;
+    padding-right: 20px;
     width: 100%;
 }
 
@@ -144,13 +144,17 @@ body {
     font-size: 12px;
     cursor: pointer;
     color: #fff;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     right: 10px;
-    display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 8px;
     display: none;
+}
+
+.close-tab-btn:hover {
+    background: #00000026;
 }
 
 .add-tab-btn {
