--- a/workflow/css/shell.css
+++ b/workflow/css/shell.css
@@ -180,17 +180,13 @@ body {
 .webview-container {
     flex-grow: 1;
     position: relative;
-    padding: 10px;
-    padding-top: 0px;
-    border-radius: 7px;
 }
 
 .workflow-webview {
     position: absolute;
-    border-radius: 7px;
     overflow: hidden;
-    width: calc(100% - 20px);
-    height: calc(100% - 10px);
+    width: 100%;
+    height: 100%;
     border: none;
     display: none;
 }
