--- a/workflow/css/shell.css
+++ b/workflow/css/shell.css
@@ -55,10 +55,10 @@ body {
     z-index: 9999;
     background-image: linear-gradient(100deg, #0093E9 0%, #80D0C7 100%);
     background-size: cover;
+    -webkit-app-region: drag; 
 }
 
 .drag-region {
-    flex-grow: 1;
     -webkit-app-region: drag; 
     display: flex;
     align-items: flex-end;
@@ -252,7 +252,7 @@ body {
 /* *** BẮT ĐẦU: CSS cho Trang Bắt Đầu *** */
 .start-page-container {
     position: absolute;
-    top: 50px; 
+    top: 45px; 
     left: 0;
     right: 0;
     bottom: 0;
@@ -325,6 +325,7 @@ body {
     padding: 9px 12px;
     cursor: pointer;
     border-radius: 6px;
+    font-weight: 500;
     font-size: 14px;
     color: #333;
     transition: background-color 0.15s ease;
@@ -346,14 +347,6 @@ body {
 }
 .context-menu-item-danger i {
     color: #d9534f;
-}
-
-.context-menu-item-danger:hover {
-    background-color: #f8d7da;
-    color: #721c24;
-}
-.context-menu-item-danger:hover i {
-    color: #721c24;
 }
 
 .context-menu-separator {
