--- a/workflow/css/style.css
+++ b/workflow/css/style.css
@@ -102,7 +102,7 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 .save-status.saved .icon { color: #198754; }
 .save-status.error .icon { color: #dc3545; }
 
-
+/* 
 .canvas-container,
 .workflow-canvas {
     cursor: url("data:image/svg+xml,%3Csvg width='32' height='32' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='16' cy='16' r='12' fill='white' stroke='black' stroke-width='2'/%3E%3Crect x='10' y='12' width='3' height='8' rx='1' fill='black'/%3E%3Crect x='15' y='12' width='3' height='8' rx='1' fill='black'/%3E%3Crect x='20' y='12' width='3' height='8' rx='1' fill='black'/%3E%3C/svg%3E") 16 16, grab;
@@ -110,7 +110,7 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 .canvas-container:active,
 .workflow-canvas:active {
     cursor: url("data:image/svg+xml,%3Csvg width='32' height='32' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='16' cy='16' r='12' fill='white' stroke='black' stroke-width='2'/%3E%3Crect x='10' y='14' width='3' height='6' rx='1' fill='black'/%3E%3Crect x='15' y='14' width='3' height='6' rx='1' fill='black'/%3E%3Crect x='20' y='14' width='3' height='6' rx='1' fill='black'/%3E%3C/svg%3E") 16 16, grabbing;
-}
+} */
 
 
 /* Node Styles */
@@ -170,7 +170,6 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 .port.out[data-port-name="success"] .port-label {color: #198754;}
 .port.out[data-port-name="error"] .port-label {color: #dc3545;}
 .port-label {
-    display: none;
     position: absolute;
     left: 20px;
     font-size: 10px;
