--- a/workflow/css/style.css
+++ b/workflow/css/style.css
@@ -164,11 +164,13 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 .port.out { right: -7px; }
 .port.out[data-port-name="success"], .port.out[data-port-name="true"], .port.out[data-port-name="try"] { background-color: #198754; }
 .port.out[data-port-name="error"], .port.out[data-port-name="false"], .port.out[data-port-name="catch"] { background-color: #dc3545; }
+
 .port.out[data-port-name="out"] { background-color: #fd7e14; }
 .port.out[data-port-name="loop"] { background-color: #6f42c1; }
 .port.out[data-port-name="done"] { background-color: #0dcaf0; }
-.port.out[data-port-name="success"] .port-label {color: #198754;}
-.port.out[data-port-name="error"] .port-label {color: #dc3545;}
+
+.port-label[data-port-name="success"] {color: #198754; fill: #198754;}
+.port-label[data-port-name="error"] {color: #dc3545; fill: #dc3545;}
 .port-label {
     position: absolute;
     left: 20px;
@@ -181,8 +183,8 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 
 /* Connector Styles */
 .connector-svg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; overflow: visible; }
-.connector-line { stroke-width: 2px; fill: none; stroke-linecap: round; transition: stroke 0.2s; pointer-events: stroke; cursor: pointer; }
-.connector-line-drawing { stroke-width: 2px; stroke: #ffc107; fill: none; stroke-dasharray: 4 4; }
+.connector-line { stroke-width: 1px; fill: none; stroke-linecap: round; transition: stroke 0.2s; pointer-events: stroke; cursor: pointer; }
+.connector-line-drawing { stroke-width: 1px; stroke: #ffc107; fill: none; stroke-dasharray: 4 4; }
 .connector-line[data-from-port="success"], .connector-line[data-from-port="true"], .connector-line[data-from-port="try"] { stroke: #198754; }
 .connector-line[data-from-port="error"], .connector-line[data-from-port="false"], .connector-line[data-from-port="catch"] { stroke: #dc3545; stroke-dasharray: 4 4; }
 .connector-line[data-from-port="out"] { stroke: #fd7e14; }
