--- a/workflow/css/style.css
+++ b/workflow/css/style.css
@@ -101,16 +101,6 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 .save-status.saved .icon { color: #198754; }
 .save-status.error .icon { color: #dc3545; }
 
-/* 
-.canvas-container,
-.workflow-canvas {
-    cursor: url("data:image/svg+xml,%3Csvg width='32' height='32' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='16' cy='16' r='12' fill='white' stroke='black' stroke-width='2'/%3E%3Crect x='10' y='12' width='3' height='8' rx='1' fill='black'/%3E%3Crect x='15' y='12' width='3' height='8' rx='1' fill='black'/%3E%3Crect x='20' y='12' width='3' height='8' rx='1' fill='black'/%3E%3C/svg%3E") 16 16, grab;
-}
-.canvas-container:active,
-.workflow-canvas:active {
-    cursor: url("data:image/svg+xml,%3Csvg width='32' height='32' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='16' cy='16' r='12' fill='white' stroke='black' stroke-width='2'/%3E%3Crect x='10' y='14' width='3' height='6' rx='1' fill='black'/%3E%3Crect x='15' y='14' width='3' height='6' rx='1' fill='black'/%3E%3Crect x='20' y='14' width='3' height='6' rx='1' fill='black'/%3E%3C/svg%3E") 16 16, grabbing;
-} */
-
 
 /* Node Styles */
 .node {
@@ -245,7 +235,7 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 .context-menu-shortcut { font-size: 0.75rem; color: #6c757d; }
 
 .side-panel {
-    position: absolute; top: 80px; bottom: 1rem; right: 1rem; width: 400px;
+    position: absolute; top: 55px; bottom: 0; right: 0; width: 500px;
     background-color: #ffffff;
     z-index: 30; overflow-y: auto;
     opacity: 1;
@@ -257,7 +247,7 @@ body { font-family: 'SFProDisplay', sans-serif; font-size: 13px; overflow: hidde
 }
 
 main:has(.side-panel) .canvas-bg footer {
-    width: calc(100% - 400px - 3rem);
+    width: calc(100% - 500px - 2rem);
 }
 
 main:has(.side-panel.hidden) .canvas-bg footer {
@@ -429,4 +419,9 @@ footer[data-ref="console-panel"].show {
     border: 5px solid #f3f3f3;
     border-top: 5px solid #3498db;
     border-radius: 50%;
+}
+
+
+.form-control {
+    border-size: 1px!important
 }
